<resources>
    <string name="app_name">FedClient</string>
    <string name="action_linear">Linear</string>
    <string name="action_moon">Moon</string>
    <string name="action_saturn">Saturn</string>
    <string name="action_settings">Settings</string>

    <string name="null_hint">账号或密码不能为空</string>
    <string name="not_equal_hint">两次输入的密码需保持一致</string>
    <string name="account_invalid_hint">用户名不是有效的手机号或邮箱</string>
    <string name="no_record">无记录</string>

    <string name="Username">用户名</string>
    <string name="Userscore">积分</string>
    <string name="Nickname">昵称</string>
    <string name="Account">用户名</string>
    <string name="Phone">手机号</string>
    <string name="modify_hint">修改</string>
    <string name="Password">密码</string>
    <string name="Back">返回</string>
    <string name="Setting">设置</string>
    <string name="Center">个人中心</string>
    <string name="Logout">注销</string>
    <string name="Exit">退出</string>

    <string name="modify_not_null">原密码、新密码、确认密码均不能为空</string>
    <string name="modify_not_equal">确认密码需与新密码保持一致</string>
    <string name="modify_not_right">原密码错误</string>
    <string name="modify_success">修改成功</string>

    <string name="test1">TEST1</string>
    <string name="test">TEST</string>
    <string name="now">当前状态</string>
    <string name="cancel">取消</string>
    <string name="confirm">确认</string>
    <string name="home">任务管理</string>
    <string name="history">历史记录</string>
    <string name="config">设置</string>
    <string name="me">我的</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Sex">性别</string>
    <string name="Email">用户邮箱</string>
</resources>