<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg0">

    <LinearLayout
        android:id="@+id/layout_titlebar"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="@color/colorPrimary"
        android:fitsSystemWindows="true"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/iv_back"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:gravity="center"
            android:onClick="onBackward"
            android:paddingLeft="18dp"
            android:paddingRight="18dp"
            android:src="@mipmap/arrow_back_white"
            android:visibility="visible" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:background="#00000000"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:text="@string/Back"
            android:textColor="#ffffff"
            android:textSize="18sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_portrait"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="30dp"
        android:paddingBottom="10dp">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/iv_head"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:src="@drawable/c0"
            app:civ_border_color="@color/white"
            app:civ_border_width="2dp"
            app:civ_fill_color="@color/white"
            app:layout_anchor="@+id/appBar"
            app:layout_anchorGravity="center"
            app:layout_collapseMode="parallax"
            app:layout_collapseParallaxMultiplier="0.7"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="修改头像"
            android:textColor="@color/color_black"
            android:layout_gravity="center"
            android:paddingLeft="@dimen/padding_left_and_right"/>

        <Button
            android:id="@+id/btn_takephoto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="拍照" />
        <Button
            android:id="@+id/btn_fromalbum"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="从相册中选取" />
    </LinearLayout>

    <!--分割线-->
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/grey"/>

    <!--
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1" >
        <ListView
            android:id="@+id/person_list"
            android:layout_width="match_parent"
            android:layout_height="570dp"></ListView>
    </LinearLayout>
    -->

    <!--用户名-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:orientation="horizontal"
        android:paddingStart="15dp"
        android:paddingEnd="15dp"
        android:paddingTop="5dp"
        android:paddingBottom="5dp">

        <TextView
            android:id="@+id/center_account"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:text="@string/Username"
            android:textColor="@color/black"
            android:textSize="18sp"/>

        <TextView
            android:id="@+id/tx_account"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:gravity="center_vertical|end"
            android:background="@color/transparent"
            android:text="13912341234"
            android:textColor="@color/gray_dark"
            android:textSize="18sp" />
    </LinearLayout>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/grey"/>

    <!--nickname-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:orientation="horizontal"
        android:paddingStart="15dp"
        android:paddingEnd="15dp"
        android:paddingTop="5dp"
        android:paddingBottom="5dp">

        <TextView
            android:id="@+id/center_nickname"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:text="昵称"
            android:textColor="@color/black"
            android:textSize="18sp"/>

        <TextView
            android:id="@+id/tx_nickname"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:gravity="center_vertical|end"
            android:background="@color/transparent"
            android:text="my-nickname"
            android:textColor="@color/gray_dark"
            android:textSize="18sp" />
    </LinearLayout>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/grey"/>

    <!--积分-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:orientation="horizontal"
        android:paddingStart="15dp"
        android:paddingEnd="15dp"
        android:paddingTop="5dp"
        android:paddingBottom="5dp">

        <TextView
            android:id="@+id/Userscore_Text"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:text="@string/Userscore"
            android:textColor="@color/black"
            android:textSize="18sp"/>

        <TextView
            android:id="@+id/tx_Userscore"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:gravity="center_vertical|end"
            android:background="@color/transparent"
            android:text="0"
            android:textColor="@color/gray_dark"
            android:textSize="18sp" />
    </LinearLayout>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/grey"/>

    <!--昵称-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:orientation="horizontal"
        android:paddingStart="15dp"
        android:paddingEnd="15dp"
        android:paddingTop="5dp"
        android:paddingBottom="5dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:text="@string/Nickname"
            android:textColor="@color/black"
            android:textSize="18sp"/>

        <Button
            android:id="@+id/btn_nickname"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:gravity="center_vertical|end"
            android:background="@color/transparent"
            android:text="@string/modify_hint"
            android:textColor="@color/gray_dark"
            android:textSize="18sp" />
    </LinearLayout>

    <!--分割线-->
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/grey"/>

    <!--密码-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:orientation="horizontal"
        android:paddingStart="15dp"
        android:paddingEnd="15dp"
        android:paddingTop="5dp"
        android:paddingBottom="5dp">

        <TextView
            android:id="@+id/passwordText"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:text="@string/Password"
            android:textColor="@color/black"
            android:textSize="18sp"/>

        <Button
            android:id="@+id/btn_password"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:background="@color/transparent"
            android:gravity="center_vertical|end"
            android:text="@string/modify_hint"
            android:textColor="@color/gray_dark"
            android:textSize="18sp" />


    </LinearLayout>

    <!--分割线-->
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/grey"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:orientation="horizontal"
        android:paddingStart="15dp"
        android:paddingEnd="15dp"
        android:paddingTop="5dp"
        android:paddingBottom="5dp">

        <Button
            android:id="@+id/btn_exit"
            style="@android:style/Widget.Button.Toggle"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:gravity="center_vertical|end"
            android:background="@color/transparent"
            android:elevation="0dp"
            android:text="@string/Logout"
            android:textColor="@color/red"
            android:textSize="18sp" />

    </LinearLayout>

    <!--
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_gravity="bottom">
        <RadioGroup
            android:id="@+id/main_menu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:orientation="horizontal"
            android:paddingTop="10dp">
            <RadioButton
                android:id="@+id/RB_home"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:button="@null"
                android:drawableTop="@drawable/renwuguanli"
                android:gravity="center"
                android:text="任务管理"
                android:textAlignment="center"
                android:textSize="10dp" />
            <RadioButton
                android:id="@+id/RB_history"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:button="@null"
                android:drawableTop="@drawable/lishi"
                android:gravity="center"
                android:text="历史记录"
                android:textAlignment="center"
                android:textSize="10dp" />

            <RadioButton
                android:id="@+id/RB_now"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:button="@null"
                android:drawableTop="@drawable/now"
                android:gravity="center"
                android:text="当前状态"
                android:textAlignment="center"
                android:textSize="10dp" />

            <RadioButton
                android:id="@+id/RB_shezhi"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:button="@null"
                android:drawableTop="@drawable/shezhi"
                android:gravity="center"
                android:text="设置"
                android:textAlignment="center"
                android:textSize="10dp" />

            <RadioButton
                android:id="@+id/RB_mine"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:button="@null"
                android:drawableTop="@drawable/mine"
                android:gravity="center"
                android:text="我的"
                android:textAlignment="center"
                android:textSize="10dp" />
        </RadioGroup>
    </LinearLayout>
    -->

</LinearLayout>