<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg2">


    <LinearLayout
        android:id="@+id/ll_portrait"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="30dp"
        android:paddingBottom="10dp">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/iv_head"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:src="@drawable/c0"
            app:civ_border_color="@color/white"
            app:civ_border_width="2dp"
            app:civ_fill_color="@color/white"
            app:layout_anchor="@+id/appBar"
            app:layout_anchorGravity="center"
            app:layout_collapseMode="parallax"
            app:layout_collapseParallaxMultiplier="0.7"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="修改头像"
            android:textColor="@color/color_black"
            android:layout_gravity="center"
            android:paddingLeft="@dimen/padding_left_and_right"/>

        <Button
            android:id="@+id/btn_takephoto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="拍照" />
        <Button
            android:id="@+id/btn_fromalbum"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="从相册中选取" />
    </LinearLayout>

    <!--分割线-->
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/grey"/>


    <!--用户名-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:orientation="horizontal"
        android:paddingStart="15dp"
        android:paddingEnd="15dp"
        android:paddingTop="5dp"
        android:paddingBottom="5dp">
        <TextView
            android:id="@+id/center_account"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:text="@string/Username"
            android:textColor="@color/black"
            android:textSize="18sp"/>

        <TextView
            android:id="@+id/tx_account"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:gravity="center_vertical|end"
            android:background="@color/transparent"
            android:text="13912341234"
            android:textColor="@color/gray_dark"
            android:textSize="18sp" />
        <Button
            android:id="@+id/btn_account"
            android:layout_width="60dp"
            android:layout_height="match_parent"
            android:background="@color/transparent"
            android:text="修改"
            android:textColor="@color/black"
            android:textSize="18sp"
            />
    </LinearLayout>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/grey"/>

    <!--nickname-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:orientation="horizontal"
        android:paddingStart="15dp"
        android:paddingEnd="15dp"
        android:paddingTop="5dp"
        android:paddingBottom="5dp">

        <TextView
            android:id="@+id/center_nickname"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:text="昵称"
            android:textColor="@color/black"
            android:textSize="18sp"/>

        <TextView
            android:id="@+id/tx_nickname"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:gravity="center_vertical|end"
            android:background="@color/transparent"
            android:text="my-nickname"
            android:textColor="@color/gray_dark"
            android:textSize="18sp" />

        <Button
            android:id="@+id/btn_nickname"
            android:layout_width="60dp"
            android:layout_height="match_parent"
            android:background="@color/transparent"
            android:text="修改"
            android:textColor="@color/black"
            android:textSize="18sp"
            />
    </LinearLayout>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/grey"/>


    <!--密码-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:orientation="horizontal"
        android:paddingStart="15dp"
        android:paddingEnd="15dp"
        android:paddingTop="5dp"
        android:paddingBottom="5dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:text="@string/Password"
            android:textColor="@color/black"
            android:textSize="18sp"/>
        <TextView
            android:layout_width="200dp"
            android:layout_height="match_parent"
            android:gravity="center_vertical|end"
            android:background="@color/transparent"
            android:text="******"
            android:textColor="@color/gray_dark"
            android:textSize="18sp" />
        <Button
            android:id="@+id/btn_password"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:background="@color/transparent"
            android:text="@string/modify_hint"
            android:textColor="@color/black"
            android:textSize="18sp" />
    </LinearLayout>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/grey"/>

    <!--手机号-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:orientation="horizontal"
        android:paddingStart="15dp"
        android:paddingEnd="15dp"
        android:paddingTop="5dp"
        android:paddingBottom="5dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:text="手机号"
            android:textColor="@color/black"
            android:textSize="18sp"/>

        <TextView
            android:id="@+id/tx_ci_phone"
            android:layout_width="200dp"
            android:layout_height="match_parent"
            android:gravity="center_vertical|end"
            android:background="@color/transparent"
            android:text="13912341234"
            android:textColor="@color/gray_dark"
            android:textSize="18sp" />

        <Button
            android:id="@+id/btn_ci_phone"
            android:layout_width="60dp"
            android:layout_height="match_parent"
            android:background="@color/transparent"
            android:text="修改"
            android:textColor="@color/black"
            android:textSize="18sp"
            />
    </LinearLayout>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/grey"/>

    <!--邮箱-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:orientation="horizontal"
        android:paddingStart="15dp"
        android:paddingEnd="15dp"
        android:paddingTop="5dp"
        android:paddingBottom="5dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:text="邮箱"
            android:textColor="@color/black"
            android:textSize="18sp"/>

        <TextView
            android:id="@+id/tx_ci_emile"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:background="@color/transparent"
            android:gravity="center_vertical|end"
            android:text="******"
            android:textColor="@color/gray_dark"
            android:textSize="18sp" />
        <Button
            android:id="@+id/btn_ci_emile"
            android:layout_width="60dp"
            android:layout_height="match_parent"
            android:background="@color/transparent"
            android:text="修改"
            android:textColor="@color/black"
            android:textSize="18sp"
            />
    </LinearLayout>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/grey"/>

    <!--性别-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:orientation="horizontal"
        android:paddingStart="15dp"
        android:paddingEnd="15dp"
        android:paddingTop="5dp"
        android:paddingBottom="5dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:text="性别"
            android:textColor="@color/black"
            android:textSize="18sp"/>
        <TextView
            android:id="@+id/tx_ci_sex"
            android:layout_width="200dp"
            android:layout_height="match_parent"
            android:background="@color/transparent"
            android:gravity="center_vertical|end"
            android:textColor="@color/gray_dark"
            android:textSize="18sp"
            android:text="男"/>
        <Button
            android:id="@+id/btn_ci_sex"
            android:layout_width="60dp"
            android:layout_height="match_parent"
            android:background="@color/transparent"
            android:text="修改"
            android:textColor="@color/black"
            android:textSize="18sp"
            />

    </LinearLayout>

    <!--分割线-->
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/grey"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:orientation="horizontal"
        android:paddingStart="15dp"
        android:paddingEnd="15dp"
        android:paddingTop="5dp"
        android:paddingBottom="5dp">

        <Button
            android:id="@+id/btn_exit"
            style="@android:style/Widget.Button.Toggle"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:gravity="center_vertical|end"
            android:background="@color/transparent"
            android:elevation="0dp"
            android:text="@string/Logout"
            android:textColor="@color/red"
            android:textSize="18sp" />

    </LinearLayout>


</LinearLayout>